# YewChipManager

./: .gitignore  Cargo.toml  README.md  Trunk.toml  manager.html  package-lock.json  package.json  rust-toolchain  util.js
scss/: _animations.scss  _chips.scss  _flexbox.scss  _layout.scss  _mixins.scss  _modal.scss  styles.scss
src/: app.rs  lib.rs  main.rs
src/agents/: chip_desc.rs  global_msg.rs  group_folder.rs  mod.rs
src/chip_library/: battle_chip.rs  chip_type.rs  elements.rs  mod.rs  ranges.rs  skills.rs
src/components/: chip_desc.rs  folder.rs  folder_chip.rs  group_folder.rs  library.rs  library_chip.rs  mod.rs  pack.rs  pack_chip.rs  sort_box.rs
src/components/chips/: folder_chip.rs  group_folder_chip.rs  library_chip.rs  mod.rs  pack_chip.rs
src/util/: mod.rs  timeout.rs
static/: _animations.scss  _buttons.scss  _chips.scss  _flexbox.scss  _layout.scss  _menu.scss  _mixins.scss  _modal.scss  _padding.scss  deferred.scss  index.html  index.ts  manager.html  manifest.webmanifest  save.js  styles.scss  util.js
