[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "A chipmanager for B&B."
edition = "2018"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "^0.4"
#yew = {git = "https://github.com/yewstack/yew.git", branch = "master"}
#yewtil = {git = "https://github.com/yewstack/yew.git", branch = "master", features=["pure"]}
#yew-services = {git = "https://github.com/yewstack/yew.git", branch = "master"}
yew = {version = "^0.18.0"}
yewtil = {version = "^0.4.0", features = ["pure"]}
wasm-bindgen = {version = "^0.2.74", features=["nightly"]}
wasm-logger = "^0.2.0"
wee_alloc = "^0.4.5"
#wasm-bindgen-futures = "*"
serde = {version = "*"}
serde_json = "*"
bincode = "*"
#once_cell = "*"
unchecked_unwrap = {version = "*", features = ["debug_checks"]}
js-sys = "*"
percent-encoding = "^2.1.0"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
  "Window",
  "Storage",
  "Event",
  "EventTarget",
  "HtmlSelectElement",
  "HtmlInputElement",
  "MouseEvent",
  "console",
  "WebSocket",
  "File",
  "FileList",
  "EventListener"
]

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false